# burn

./: .gitignore  Cargo.toml  README.md
dataset/: test.csv
src/: main.rs
src/linear/: basic1.rs  basic2.rs  mod.rs
src/logistic/: basic1.rs  mod.rs
src/lstm/: basic.rs  basic2.rs  basic3.rs  mod.rs
src/mnist/: mod.rs
src/simple/: mod.rs
src/transformer/: basic1.rs
