[package]
name = "burn"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.15.0", features = ["train", "wgpu", "vision"] }
csv = "1.3.1"
serde = "1.0.215"
[profile.release]
opt-level = 3           # 최대 최적화
lto = true             # 링크 타임 최적화
codegen-units = 1      # 더 나은 최적화를 위해 단일 유닛으로 생성
panic = 'abort'        # 패닉 시 언와인딩 대신 즉시 중단
strip = true           # 디버그 심볼 제거